# rust-analyzer-crash

./: Cargo.toml
src/: main.rs  other.rs
